--- a/profile.html
+++ b/profile.html
@@ -53,8 +53,8 @@
     </button>
 
 
-
-    <div id="admin-dashboard" style="display:none; max-width:800px; margin:40px auto;">
+    <br><br>
+    <div id="admin-dashboard">
     <h2>Admin Dashboard</h2>
 
     <div class="bx--grid">
