--- a/profile.html
+++ b/profile.html
@@ -53,9 +53,9 @@
     </button>
 
 
-    <br><br>
+    <br><br><br><br>
     <div id="admin-dashboard">
-    <h2>Admin Dashboard</h2>
+    <h2>Admin Dashboard</h2><br><br>
 
     <div class="bx--grid">
       <div class="bx--row">
