--- a/profile.html
+++ b/profile.html
@@ -54,25 +54,25 @@
 
 
     <br><br><br><br>
-    <div id="admin-dashboard">
+    <div id="admin-dashboard" style="display: none;">
     <h2>Admin Dashboard</h2><br><br>
 
-    <div class="bx--grid">
-      <div class="bx--row">
-        <div class="bx--col"><strong>Gear Public:</strong> <span id="g-public">–</span></div>
-        <div class="bx--col"><strong>Private:</strong> <span id="g-private">–</span></div>
-        <div class="bx--col"><strong>Reviewing:</strong> <span id="g-reviewing">–</span></div>
-        <div class="bx--col"><strong>Draft:</strong> <span id="g-draft">–</span></div>
-      </div>
-      <br>
-      <div class="bx--row">
-        <div class="bx--col"><strong>Users:</strong> <span id="c-users">–</span></div>
-        <div class="bx--col"><strong>Rigs:</strong> <span id="c-rigs">–</span></div>
-        <div class="bx--col"><strong>Plexes:</strong> <span id="c-plexes">–</span></div>
-        <div class="bx--col"><strong>SubPlexes:</strong> <span id="c-subplexes">–</span></div>
+      <div class="bx--grid">
+        <div class="bx--row">
+          <div class="bx--col"><strong>Gear Public:</strong> <span id="g-public">–</span></div>
+          <div class="bx--col"><strong>Private:</strong> <span id="g-private">–</span></div>
+          <div class="bx--col"><strong>Reviewing:</strong> <span id="g-reviewing">–</span></div>
+          <div class="bx--col"><strong>Draft:</strong> <span id="g-draft">–</span></div>
+        </div>
+        <br>
+        <div class="bx--row">
+          <div class="bx--col"><strong>Users:</strong> <span id="c-users">–</span></div>
+          <div class="bx--col"><strong>Rigs:</strong> <span id="c-rigs">–</span></div>
+          <div class="bx--col"><strong>Plexes:</strong> <span id="c-plexes">–</span></div>
+          <div class="bx--col"><strong>SubPlexes:</strong> <span id="c-subplexes">–</span></div>
+        </div>
       </div>
     </div>
-  </div>
 
 
   </div>
