--- a/gears.html
+++ b/gears.html
@@ -134,9 +134,9 @@
     <script src="edit-handler.js"></script>
     <script src="utils.js"></script>
     <script src="subplexes.js"></script>
-    <script src="gears.js"></script>
+    <script src="gears_lazy.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-gears.js"></script>
+    <script src="nav-gears_lazy.js"></script>
     <script src="add-to-rig.js"></script>
   </div>
 
