test filter user non admin

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <th scope="col" style="padding:12px;">Feature</th>
             <th scope="col" style="padding:12px;">Photos</th>
             <th scope="col" style="padding:12px;">MIDIs</th>
-            <th scope="col" style="padding:12px;">Plexes</th>
+            <th scope="col" style="padding:12px;">PedalPlex</th>
           </tr>
         </thead>
         <tbody>
