--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
       "operatingSystem": "Web",
       "description": "PedalPlex is a web-based tool for guitarists and bassists to build pedalboards, save tone presets, and recall amp and pedal settings over time.",
       "url": "https://pedalplex.com",
+      "featureList": [
+        "Visual pedalboard builder",
+        "Knob position memory",
+        "Tone preset saving as Plexes",
+        "Rig organization",
+        "AI-generated tone ideas as SubPlexes"
+      ],
       "offers": {
         "@type": "Offer",
         "price": "0",
@@ -58,11 +65,14 @@
   <!-- Hero / Splash -->
   <main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
     <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
-    <h1 style="font-size:2.25rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
+    <!-- <h1 style="font-size:2.25rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
-      <!-- Build, Tweak, Save your own Guitar & Bass setups - for free and without limits. -->
       Create a visual memory of your guitar and bass rigs.<br>
       Save, recall, and rebuild your tones — even months later.
+    </p> -->
+    <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex: a Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+      Because Great Tones Deserve a Save Button.
     </p>
 
     <!-- CTA buttons -->
@@ -129,6 +139,12 @@
 
   </main>
 
+  <h2 style="font-size:2rem; color:#fff; font-weight:600">Save and Recall Guitar Pedal & Amp Settings</h2>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+      PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls.<br>
+      Recreate your tone settings months later without guessing.
+    </p>
+
   <img src="logos/splash.png" alt="PedalPlex visual guitar pedalboard and tone preset builder"
     style="width:100%; height:auto; margin-top:2rem;" />
 
@@ -141,9 +157,8 @@
       positions as tone presets, and organize sounds for songs, sessions, and live performances.
     </p>
     <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
-      Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">decision memory</span>: why a tone
-      works,
-      how it evolved, and how to rebuild it months later without relying on specific hardware.
+      Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
+      works, how it evolved, and how to rebuild it months later without relying on specific hardware.
     </p>
   </section>
 
@@ -403,7 +418,7 @@
   <section class="bx--grid features" style="margin-top:5rem;">
     <div class="bx--row">
       <div class="bx--col">
-        <h3>Browse Gears</h3>
+        <h3><a href="/gears">Browse Gears</a></h3>
         <p>
           <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
           their controls to match your real gear.
