--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       Create a visual memory of your guitar and bass rigs.<br>
       Save, recall, and rebuild your tones — even months later.
     </p> -->
-    <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex: a Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
+    <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex<br>A Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       Because Great Tones Deserve a Save Button.
     </p>
@@ -139,11 +139,13 @@
 
   </main>
 
+  <section id="save-and-recall" style="max-width:800px; margin:5rem auto;text-align:center;">
   <h2 style="font-size:2rem; color:#fff; font-weight:600">Save and Recall Guitar Pedal & Amp Settings</h2>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls.<br>
       Recreate your tone settings months later without guessing.
     </p>
+  </section>
 
   <img src="logos/splash.png" alt="PedalPlex visual guitar pedalboard and tone preset builder"
     style="width:100%; height:auto; margin-top:2rem;" />
@@ -418,28 +420,28 @@
   <section class="bx--grid features" style="margin-top:5rem;">
     <div class="bx--row">
       <div class="bx--col">
-        <h3><a href="/gears">Browse Gears</a></h3>
+        <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
         <p>
           <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
           their controls to match your real gear.
         </p>
       </div>
       <div class="bx--col">
-        <h3>Build your Rigs</h3>
+        <h3><a style="color:#fff; text-decoration:none" href="/rigs">Build your Rigs</a></h3>
         <p>
           Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>.
           Build as many rigs as you need for your songs, riffs, and gigs.
         </p>
       </div>
       <div class="bx--col">
-        <h3>Save decision as Plexes</h3>
+        <h3><a style="color:#fff; text-decoration:none" href="/plexes">Save decision as Plexes</a></h3>
         <p>
           <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize
           your riffs and songs in folders for easy access anytime.
         </p>
       </div>
       <div class="bx--col">
-        <h3>Learn & Inspire with SubPlexes</h3>
+        <h3><a style="color:#fff; text-decoration:none" href="/gears">Learn & Inspire with SubPlexes</a></h3>
         <p>
           <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired.
           Discover new tone ideas and combinations for your Plexes.
