--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
       Create a visual memory of your guitar and bass rigs.<br>
       Save, recall, and rebuild your tones — even months later.
     </p> -->
-    <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex<br>A Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
+    <!-- <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex<br>A Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       Because Great Tones Deserve a Save Button.
+    </p> -->
+    <h1 style="font-size:2.25rem; font-weight:700;">Stop Forgetting Your Best Tones.</h1>
+    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+      Visually save and understand your pedal and amp settings.<br>
     </p>
 
     <!-- CTA buttons -->
@@ -127,11 +131,11 @@
 
       if (currentUser && currentUser.username) {
         // Utente loggato: mostra bottone "Vai ai tuoi Rigs"
-        ctaContainer.appendChild(createButton('plexes', 'bx--btn bx--btn--primary', 'Go to My Plexes', svgPlexes));
+        ctaContainer.appendChild(createButton('plexes', 'bx--btn bx--btn--primary', 'Start Free', svgPlexes));
       } else {
         // Guest / non loggato: mostra Start as Guest e Login
-        ctaContainer.appendChild(createButton('rigs', 'bx--btn bx--btn--tertiary', 'Start as Guest', svgGuest));
-        ctaContainer.appendChild(createButton('login', 'bx--btn bx--btn--primary', 'PedalPlexer Login', svgLogin));
+        ctaContainer.appendChild(createButton('rigs', 'bx--btn bx--btn--tertiary', 'Start Free', svgGuest));
+        ctaContainer.appendChild(createButton('login', 'bx--btn bx--btn--primary', 'Login', svgLogin));
       }
     </script>
 
@@ -143,7 +147,8 @@
   <h2 style="font-size:2rem; color:#fff; font-weight:600">Save and Recall Guitar Pedal & Amp Settings</h2>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls.<br>
-      Recreate your tone settings months later without guessing.
+      Recreate your tone settings months later without guessing.<br>
+      Because Great Tones Deserve a Save Button.
     </p>
   </section>
 
