--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
   <section id="save-and-recall" style="max-width:800px; margin:5rem auto;text-align:center;">
   <h2 style="font-size:2rem; color:#fff; font-weight:600">Save and Recall Guitar Pedal & Amp Settings</h2>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
-      PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls.<br>
+      PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls. 
       Recreate your tone settings months later without guessing.<br>
-      Because Great Tones Deserve a Save Button.
+      <span style="color:#9C54D5">PedalPlex: Because Great Tones Deserve a Save Button.</span>
     </p>
   </section>
 
