--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls. 
       Recreate your tone settings months later without guessing.<br>
-      <span style="color:#9C54D5">PedalPlex: Because Great Tones Deserve a Save Button.</span>
+      Because Great Tones Deserve a <span style="color:#9C54D5">Save</span> Button.
     </p>
   </section>
 
