--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
   <!-- Hero / Splash -->
   <main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
     <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
-    <!-- <h1 style="font-size:2.25rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
+    <!-- <h1 style="font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       Create a visual memory of your guitar and bass rigs.<br>
       Save, recall, and rebuild your tones — even months later.
     </p> -->
-    <!-- <h1 style="font-size:2.25rem; font-weight:700;">PedalPlex<br>A Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
+    <!-- <h1 style="font-weight:700;">PedalPlex<br>A Guitar & Bass Pedalboard Builder with Tone Preset Memory</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       Because Great Tones Deserve a Save Button.
     </p> -->
-    <h1 style="font-size:2.25rem; font-weight:700;">Stop Forgetting Your Best Tones.</h1>
+    <h1 style="font-weight:700;">Stop Forgetting Your Best Tones.</h1>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       Visually save and understand your pedal and amp settings.<br>
     </p>
