--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
   <section id="save-and-recall" style="max-width:800px; margin:5rem auto;text-align:center;">
   <h2 style="font-size:2rem; color:#fff; font-weight:600">Save and Recall Guitar Pedal & Amp Settings</h2>
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
-      PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls. 
-      Recreate your tone settings months later without guessing.<br>
+      <!-- PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls. 
+      Recreate your tone settings months later without guessing.<br> -->
+      Store exact knob and switch positions for pedals and amps. Recreate your favorite tones months later—without guessing.
       Because Great Tones Deserve a <span style="color:#9C54D5">Save</span> Button.
     </p>
   </section>
@@ -159,14 +160,20 @@
   <section id="what-is-pedalplex" style="max-width:800px; margin:5rem auto;text-align:center;">
     <h2 style="font-size:2rem; color:#fff; font-weight:600">What is PedalPlex?</h2>
     <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
-      PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
+      <!-- PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
       It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
-      positions as tone presets, and organize sounds for songs, sessions, and live performances.
+      positions as tone presets, and organize sounds for songs, sessions, and live performances. -->
+      PedalPlex is a web-based pedalboard and guitar rig management tool for guitarists and bassists.
+      With PedalPlex, you can:<br>
+      - Visually recreate your pedalboard and amp setup.<br>
+      - Save exact knob and switch positions as tone presets.<br>
+      - Organize sounds for songs, sessions, and live performances.<br>
+      - Understand why a tone works and how to rebuild it months later.
     </p>
-    <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
+    <!-- <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
       works, how it evolved, and how to rebuild it months later without relying on specific hardware.
-    </p>
+    </p> -->
   </section>
 
 
