even more simplified cta

--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
       <!-- PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
       It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
       positions as tone presets, and organize sounds for songs, sessions, and live performances. -->
-      PedalPlex is a web-based pedalboard and guitar rig management tool for guitarists and bassists.
-      With PedalPlex, you can:<br>
-      - Visually recreate your pedalboard and amp setup.<br>
-      - Save exact knob and switch positions as tone presets.<br>
-      - Organize sounds for songs, sessions, and live performances.<br>
-      - Understand why a tone works and how to rebuild it months later.
+      PedalPlex is a web-based pedalboard and guitar rig management tool for guitarists and bassists.<br>
+      With PedalPlex, you can create<br>
+      - <span style="color:#9C54D5">Rigs</span>: visually recreate your pedalboard and amp setup<br>
+      - <span style="color:#9C54D5">Plexes</span>: save exact overall knob and switch positions, and organise your tones for songs, sessions and live performances<br>
+      - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later
     </p>
     <!-- <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
