--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
       <!-- PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
       It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
       positions as tone presets, and organize sounds for songs, sessions, and live performances. -->
-      PedalPlex is a web-based pedalboard and guitar rig management tool for guitarists and bassists.<br>
-      With PedalPlex, you can create<br>
+      A web-based pedalboard and rig manager for guitarists and bassists. PedalPlex lets you:
       - <span style="color:#9C54D5">Rigs</span>: visually recreate your pedalboard and amp setup<br>
       - <span style="color:#9C54D5">Plexes</span>: save exact overall knob and switch positions, and organise your tones for songs, sessions and live performances<br>
       - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later
