simplify even more

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       why it worked?</h2>
     <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Photos freeze the past. MIDI saves machines.<br>
-      <span style="color:#9C54D5">But your decisions live somewhere else.</span>
+      <span style="color:#9C54D5">PedalPlex preserves your decisions.</span>
     </p>
     <!-- Glow border container -->
     <!-- <div style="
@@ -432,29 +432,33 @@
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
         <p>
-          <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
-          their controls to match your real gear.
+          <!-- <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
+          their controls to match your real gear. -->
+          Explore a growing library of pedals and amps. Visualize and customize their controls to match your real gear.
         </p>
       </div>
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/rigs">Build your Rigs</a></h3>
         <p>
-          Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>.
-          Build as many rigs as you need for your songs, riffs, and gigs.
+          <!-- Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>.
+          Build as many rigs as you need for your songs, riffs, and gigs. -->
+          Arrange pedals and amps to create faithful digital copies of your setups. Build as many rigs as you need for songs, riffs, or gigs.
         </p>
       </div>
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/plexes">Save decision as Plexes</a></h3>
         <p>
-          <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize
-          your riffs and songs in folders for easy access anytime.
+          <!-- <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize
+          your riffs and songs in folders for easy access anytime. -->
+          Capture exact knob and switch positions for instant recall. Organize your tones and riffs for easy access anytime.
         </p>
       </div>
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/gears">Learn & Inspire with SubPlexes</a></h3>
         <p>
-          <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired.
-          Discover new tone ideas and combinations for your Plexes.
+          <!-- <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired.
+          Discover new tone ideas and combinations for your Plexes. -->
+          Discover new tone ideas and combinations. SubPlexes show why a tone works and how to creatively explore your gear.
         </p>
       </div>
     </div>
