--- a/index.html
+++ b/index.html
@@ -164,10 +164,44 @@
       It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
       positions as tone presets, and organize sounds for songs, sessions, and live performances. -->
       A web-based pedalboard and rig manager for guitarists and bassists. PedalPlex lets you:
-      - <span style="color:#9C54D5">Rigs</span>: visually recreate your pedalboard and amp setup<br>
+      <!-- - <span style="color:#9C54D5">Rigs</span>: visually recreate your pedalboard and amp setup<br>
       - <span style="color:#9C54D5">Plexes</span>: save exact overall knob and switch positions, and organise your tones for songs, sessions and live performances<br>
-      - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later
+      - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later -->
     </p>
+    <div class="bx--row">
+      <div class="bx--col">
+        <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
+        <p>
+          <!-- <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
+          their controls to match your real gear. -->
+          Explore a <span style="color:#9C54D5">growing library of pedals and amps</span>. Visualize and customize their controls to match your real gear.
+        </p>
+      </div>
+      <div class="bx--col">
+        <h3><a style="color:#fff; text-decoration:none" href="/rigs">Build your Rigs</a></h3>
+        <p>
+          <!-- Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>.
+          Build as many rigs as you need for your songs, riffs, and gigs. -->
+          Arrange pedals and amps to create <span style="color:#9C54D5">faithful digital copies of your setups</span>. Build as many rigs as you need for songs, riffs, or gigs.
+        </p>
+      </div>
+      <div class="bx--col">
+        <h3><a style="color:#fff; text-decoration:none" href="/plexes">Save decision as Plexes</a></h3>
+        <p>
+          <!-- <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize
+          your riffs and songs in folders for easy access anytime. -->
+          <span style="color:#9C54D5">Capture exact knob and switch positions</span> for instant recall. Organize your tones and riffs for easy access anytime.
+        </p>
+      </div>
+      <div class="bx--col">
+        <h3><a style="color:#fff; text-decoration:none" href="/gears">Learn & Inspire with SubPlexes</a></h3>
+        <p>
+          <!-- <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired.
+          Discover new tone ideas and combinations for your Plexes. -->
+          Discover new tone ideas and combinations. SubPlexes show <span style="color:#9C54D5">why a tone works</span> and how to creatively explore your gear.
+        </p>
+      </div>
+    </div>
     <!-- <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
       works, how it evolved, and how to rebuild it months later without relying on specific hardware.
@@ -427,42 +461,9 @@
 
 
   <!-- Features -->
-  <section class="bx--grid features" style="margin-top:5rem;">
-    <div class="bx--row">
-      <div class="bx--col">
-        <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
-        <p>
-          <!-- <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize
-          their controls to match your real gear. -->
-          Explore a growing library of pedals and amps. Visualize and customize their controls to match your real gear.
-        </p>
-      </div>
-      <div class="bx--col">
-        <h3><a style="color:#fff; text-decoration:none" href="/rigs">Build your Rigs</a></h3>
-        <p>
-          <!-- Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>.
-          Build as many rigs as you need for your songs, riffs, and gigs. -->
-          Arrange pedals and amps to create faithful digital copies of your setups. Build as many rigs as you need for songs, riffs, or gigs.
-        </p>
-      </div>
-      <div class="bx--col">
-        <h3><a style="color:#fff; text-decoration:none" href="/plexes">Save decision as Plexes</a></h3>
-        <p>
-          <!-- <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize
-          your riffs and songs in folders for easy access anytime. -->
-          Capture exact knob and switch positions for instant recall. Organize your tones and riffs for easy access anytime.
-        </p>
-      </div>
-      <div class="bx--col">
-        <h3><a style="color:#fff; text-decoration:none" href="/gears">Learn & Inspire with SubPlexes</a></h3>
-        <p>
-          <!-- <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired.
-          Discover new tone ideas and combinations for your Plexes. -->
-          Discover new tone ideas and combinations. SubPlexes show why a tone works and how to creatively explore your gear.
-        </p>
-      </div>
-    </div>
-  </section>
+  <!-- <section class="bx--grid features" style="margin-top:5rem;">
+    
+  </section> -->
 
 
 
