--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
       - <span style="color:#9C54D5">Plexes</span>: save exact overall knob and switch positions, and organise your tones for songs, sessions and live performances<br>
       - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later -->
     </p>
+    <!-- <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
+      Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
+      works, how it evolved, and how to rebuild it months later without relying on specific hardware.
+    </p> -->
+  </section>
+
+  <!-- Features -->
+  <section class="bx--grid features" style="margin-top:1rem;">
     <div class="bx--row">
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
@@ -202,10 +210,6 @@
         </p>
       </div>
     </div>
-    <!-- <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
-      Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">tone organisation</span>: why a tone
-      works, how it evolved, and how to rebuild it months later without relying on specific hardware.
-    </p> -->
   </section>
 
 
@@ -460,10 +464,7 @@
 
 
 
-  <!-- Features -->
-  <!-- <section class="bx--grid features" style="margin-top:5rem;">
-    
-  </section> -->
+  
 
 
 
