--- a/index.html
+++ b/index.html
@@ -486,82 +486,82 @@
    <section id="save-and-recall" style="max-width:800px; margin:5rem auto;text-align:center;">
   <h2 style="font-size:2rem; color:#fff; font-weight:600">Frequently Asked Questions</h2>
     <h4>Is PedalPlex a sound modeling app?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     No. PedalPlex does not generate or simulate sound. It helps you visually document and organize real pedal and amp settings so you can recreate your tones accurately.
     </p>
 
     <h4>Do my saved settings work with different amps?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     PedalPlex saves your exact knob and switch positions. Tone will always depend on the amp, guitar, room, and context — but PedalPlex preserves your decisions, so you always know what you did and why.
     </p>
 
     <h4>Why not just take a photo of my pedalboard?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Photos freeze a moment. PedalPlex lets you organize tones by songs and sessions, save multiple versions, add descriptions and tags, and understand how each piece of gear contributes to the final tone. It’s documentation, not just memory.
     </p>
 
     <h4>What’s the difference between a Rig, a Plex, and a SubPlex?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     A Rig is your full pedalboard and amp setup. A Plex is a complete saved configuration of that rig. A SubPlex is a saved configuration of a single piece of gear, helping you understand why that setting works.
     </p>
 
     <h4>Is PedalPlex free?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Yes. PedalPlex is currently free to use.
     </p>
 
     <h4>Do I need to download anything?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     No. PedalPlex runs in your browser. You can access it from desktop or mobile without installing software.
     </p>
 
     <h4>Can I use it for bass?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Yes. PedalPlex works for guitar and bass rigs.
     </p>
 
     <h4>Why would I need this?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     If you play live, record in different sessions, experiment with multiple tones, or use boutique or complex pedals, PedalPlex helps you stop guessing and start remembering.
     </p>
 
     <h4>I already remember my settings. Why would I need this?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Until you don’t. Live shows, rehearsals, last-minute tweaks, and studio adjustments make tones evolve. PedalPlex ensures you never rely on memory alone.
     </p>
 
     <h4>Isn’t this overkill for just a few pedals?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Even simple rigs change over time. Small gain adjustments, different delay mixes, or subtle EQ tweaks matter. PedalPlex captures those micro-decisions before they’re forgotten.
     </p>
 
     <h4>What if I tweak settings constantly?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Perfect. PedalPlex doesn’t lock you into one “correct” tone. It lets you document versions, compare them, and understand what changed.
     </p>
 
     <h4>Does this replace my ears?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     No. PedalPlex doesn’t create tone. It preserves your creative decisions so your ears can keep exploring instead of retracing steps.
     </p>
 
     <h4>Is this for beginners or advanced players?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Both. Beginners learn faster by understanding why settings work. Experienced players stop losing tones they worked hard to build.
     </p>
 
     <h4>I play live. How does this help me?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Before a gig, check your exact settings, rebuild your board quickly, and restore tones after transport or accidental knob movement. After a gig, save what worked and refine what didn’t.
     </p>
 
     <h4>Is this meant to replace analog workflow?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     Not at all. PedalPlex respects analog gear. It simply adds structure and memory to it.
     </p>
 
     <h4>What makes SubPlexes different?</h4>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+    <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     SubPlexes don’t just save knob positions. They capture intent. Instead of “Gain at 2 o’clock,” you remember tight low-gain rhythm, gated pulse fuzz, or wide ambient drive. That’s a deeper level of understanding.
     </p>
   </section>
