--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
   </section> -->
 
    <section id="save-and-recall" style="max-width:800px; margin:5rem auto;text-align:center;">
-  <h2 style="font-size:2rem; color:#fff; font-weight:600">Frequently Asked Questions</h2>
+  <h2 style="font-size:2rem; color:#fff; font-weight:600">Frequently Asked Questions</h2><br>
     <h4>Is PedalPlex a sound modeling app?</h4>
     <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
     No. PedalPlex does not generate or simulate sound. It helps you visually document and organize real pedal and amp settings so you can recreate your tones accurately.
