--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
     <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
       <!-- PedalPlex lets you store exact knob positions for delay, distortion, reverb, modulation and amplifier controls. 
       Recreate your tone settings months later without guessing.<br> -->
-      Store exact knob and switch positions for pedals and amps. Recreate your favorite tones months later—without guessing.
+      PedalPlex is a digital tool that helps guitarists and bassists save, organize and recall their pedal settings 
+      and amplifier configurations. Store knob positions and tone presets in one place.
+      
+      <!-- Store exact knob and switch positions for pedals and amps. Recreate your favorite tones months later—without guessing. -->
       Because Great Tones Deserve a <span style="color:#9C54D5">Save</span> Button.
     </p>
   </section>
@@ -507,7 +510,7 @@
 
     <h4>Is PedalPlex free?</h4>
     <p style="font-size:1rem; margin-bottom:1rem; color:#717171;">
-    Yes. PedalPlex is currently free to use.
+    Yes. PedalPlex is free to use.
     </p>
 
     <h4>Do I need to download anything?</h4>
