--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <!-- PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
       It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
       positions as tone presets, and organize sounds for songs, sessions, and live performances. -->
-      A web-based pedalboard and rig manager for guitarists and bassists. PedalPlex lets you to:
+      PedalPlex lets you to:
       <!-- - <span style="color:#9C54D5">Rigs</span>: visually recreate your pedalboard and amp setup<br>
       - <span style="color:#9C54D5">Plexes</span>: save exact overall knob and switch positions, and organise your tones for songs, sessions and live performances<br>
       - <span style="color:#9C54D5">SubPlexes</span>: understand why a tone works on a specific gear even months later -->
@@ -178,7 +178,7 @@
   </section>
 
   <!-- Features -->
-  <section class="bx--grid features" style="margin-top:0.5rem;">
+  <section class="bx--grid features" style="margin-top:0rem;">
     <div class="bx--row">
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
