--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </section>
 
   <!-- Features -->
-  <section class="bx--grid features" style="margin-top:0rem;">
+  <div class="bx--grid features">
     <div class="bx--row">
       <div class="bx--col">
         <h3><a style="color:#fff; text-decoration:none" href="/gears">Browse Gears</a></h3>
@@ -213,7 +213,7 @@
         </p>
       </div>
     </div>
-  </section>
+  </div>
 
 
   <!-- The problem -->
