--- a/view-gear.html
+++ b/view-gear.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PedalPlex</title>
   <link rel="icon" href="logos/pedalplex_logo_gradient.png" type="image/x-icon">
+
   <!-- Anticipate Carbon Design load -->
   <link rel="dns-prefetch" href="https://1.www.s81c.com">
   <link rel="preconnect" href="https://1.www.s81c.com" crossorigin>
@@ -25,38 +25,41 @@
   <link rel="stylesheet" href="css/style.css" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
+
 <body>
-  
   <div id="page-content" style="display: none;">
 
     <div id="pedalboard-controls" style="display: flex; align-items: center; gap: 8px; width: 100%;">
 
-      <a id="backToCatalog" href="gears" class="bx--btn bx--btn--tertiary" style="margin-left:8px; max-width:500px!important;">Back to Catalog
+      <a id="backToCatalog" href="gears" class="bx--btn bx--btn--tertiary" style="margin-left:8px; max-width:500px!important;">
+        Back to Catalog
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"></path>
         </svg>
       </a>
-      <a id="addToRig" href="#" class="bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">Add to a Rig
+
+      <a id="addToRig" href="#" class="bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">
+        Add to a Rig
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M18 6L16.57 7.393 24.15 15 4 15 4 17 24.15 17 16.57 24.573 18 26 28 16 18 6z"/>
         </svg>   
       </a>
-      <button class="js-openFXDB bx--btn bx--btn--danger">
-                          Open in FXDB
-                          <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"
-                               fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true"
-                               class="bx--btn__icon">
-                            <path fill="none" d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z" data-icon-path="inner-path"></path><path d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4ZM16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"></path>
-                          </svg>
-                        </button>
 
-    </div><br>
+      <button class="js-openFXDB bx--btn bx--btn--danger">
+        Open in FXDB
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true"
+              class="bx--btn__icon">
+          <path fill="none" d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z" data-icon-path="inner-path"></path>
+          <path d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4ZM16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"></path>
+        </svg>
+      </button>
+    </div>
+    <br>
     <h3 id="gearName" style="text-align:center;"></h3>
     <br><br>
     <div id="preset"></div>
     <div id="results"></div>
-
-
 
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -72,65 +75,49 @@
     <script src="edit-handler.js"></script>
   </div>
 
-
-
-
-
   <script>
-  // Check user authentication
+  // ==================== Auth / Guest Mode ====================
   $(document).ready(function() {
-  if (window.location.protocol === 'file:') {
-    alert('Please run this app via a local HTTP server for full functionality.');
-    $('#loadingMessage').hide();
-    $('#page-content').hide();
-    return;
-  }
-
-  const token = localStorage.getItem('authToken');
-
-  if (!token) {
-    // Guest mode
-    $('#loadingMessage').hide();
-    $('#page-content').show();
-
-    window.currentUser = { role: 'guest' };
-
-    if (typeof initNavCatalog === 'function') initNavCatalog('guest');
-    if (typeof initCatalog === 'function') initCatalog('guest');
-
-    return;
-  }
-
-  // Existing auth check
-  $.ajax({
-    url: 'https://api.pedalplex.com/USER_CHECK_AUTH_JWT.php',
-    method: 'GET',
-    dataType: 'json',
-    headers: { 'Authorization': 'Bearer ' + token },
-    success: function(userFromServer) {
-      $('#loadingMessage').hide(); 
-      $('#page-content').show();
-
-      window.currentUser = userFromServer;
-
-      if (typeof initNavCatalog === 'function') initNavCatalog(userFromServer.role);
-      if (typeof initCatalog === 'function') initCatalog(userFromServer.role);
-    },
-    error: function(xhr) {
-      console.error('Auth check failed:', xhr.status, xhr.responseText);
-      if (xhr.status === 401) {
-        localStorage.removeItem('authToken');
-        window.location.href = '';
-      } else {
-        alert('Failed to verify authentication. Please try again.');
-      }
+    if (window.location.protocol === 'file:') {
+      alert('Please run this app via a local HTTP server for full functionality.');
+      $('#loadingMessage').hide();
+      $('#page-content').hide();
+      return;
     }
+
+    const token = localStorage.getItem('authToken');
+
+    function startAppAs(role, userInfo = {}) {
+      $('#loadingMessage').hide();
+      $('#page-content').show();
+      window.currentUser = Object.assign({ role }, userInfo);
+
+      if (typeof initNavCatalog === 'function') initNavCatalog(role);
+      if (typeof initCatalog === 'function') initCatalog(role);
+    }
+
+    if (!token) {
+      // No token → Guest mode
+      startAppAs('guest');
+      return;
+    }
+
+    // Try authenticated user check
+    $.ajax({
+      url: 'https://api.pedalplex.com/USER_CHECK_AUTH_JWT.php',
+      method: 'GET',
+      dataType: 'json',
+      headers: { 'Authorization': 'Bearer ' + token },
+      success: function(userFromServer) {
+        startAppAs(userFromServer.role, userFromServer);
+      },
+      error: function(xhr) {
+        console.warn('Auth check failed, switching to guest mode:', xhr.status, xhr.responseText);
+        localStorage.removeItem('authToken');
+        startAppAs('guest');
+      }
+    });
   });
-});
-
-</script>
-
-
-
+  </script>
 </body>
 </html>
