--- a/view-gear.html
+++ b/view-gear.html
@@ -38,7 +38,7 @@
         </svg>
       </a>
 
-      <a id="addToRig" href="#" class="bx--btn bx--btn--tertiary" type="button" style="margin-left: auto!important; max-width:500px!important;">
+      <a id="addToRig" href="#" class="bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">
         Add to a Rig
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M18 6L16.57 7.393 24.15 15 4 15 4 17 24.15 17 16.57 24.573 18 26 28 16 18 6z"/>
