--- a/login.html
+++ b/login.html
@@ -31,10 +31,11 @@
     <!-- Optional Email -->
     <input type="email" id="email" placeholder="Email" class="bx--text-input" style="display: none; margin-bottom: 10px; width: 100%;" />
 
-    <div style="margin-bottom: 10px; text-align: left;">
+    <div style="margin-bottom: 10px; text-align: left; display:none;" id="newsletterContainer">
       <input type="checkbox" id="subscribeNewsletter" />
       <label for="subscribeNewsletter">Stay in the loop! Subscribe to our newsletter for the latest updates, exclusive tips and tone ideas!</label>
     </div>
+
 
     <div id="recaptchaContainer" style="display:none;"></div>
     <!-- <div id="recaptchaContainer" style="display:none;">
